--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path: ^1.9.0
   dio: ^5.8.0+1
   camera: ^0.11.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
