--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Prettyrini</string>
+	<string>pepperoniiiiiiii</string>
 	<!-- Camera Permission -->
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs camera access to capture images for disease diagnosis</string>
