--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   dio: ^5.8.0+1
   camera: ^0.11.2
   loading_animation_widget: ^1.3.0
+  web_socket_channel: ^3.0.3
+  intl: ^0.20.2
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  change_app_package_name: ^1.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
